--- a/actions/update-badge/action.yml
+++ b/actions/update-badge/action.yml
@@ -22,10 +22,10 @@ inputs:
     description: Badge color
     required: false
     default: blue
-  filename_format:
-    description: Gist filename format, ({N} represents repository ID (N=0), branch name (N=1), or badge name (N=2))
+  filename_template:
+    description: "Gist filename template ({0}: badge name)"
     required: false
-    default: "{0}__{1}__{2}.json"
+    default: badge__{0}.json
 outputs:
   badge:
     description: Updated badge
@@ -42,14 +42,14 @@ runs:
           label ${{ toJSON(inputs.label) }}
           message ${{ toJSON(inputs.message) }}
           color ${{ toJSON(inputs.color) }}
-          filename_format ${{ toJSON(inputs.filename_format) }}
+          filename_template ${{ toJSON(inputs.filename_template) }}
     - uses: notalexross/cicd-github/actions/gist@main
       with:
         gist_token: ${{ inputs.gist_token }}
         gist_id: ${{ inputs.gist_id }}
         method: POST
-        filename: ${{ format(inputs.filename_format, github.event.repository.id, github.ref_name, inputs.name) }}
+        filename: ${{ format(inputs.filename_template, inputs.name) }}
         content: '{"schemaVersion":1,"label":"${{ inputs.label }}","message":"${{ inputs.message }}","color":"${{ inputs.color }}"}'
     - id: output
       shell: bash
-      run: echo "::set-output name=badge::${{ format('https://img.shields.io/endpoint?url=https://gist.githubusercontent.com/{0}/{1}/raw/{2}', github.repository_owner, inputs.gist_id, format(inputs.filename_format, github.event.repository.id, github.ref_name, inputs.name)) }}"
+      run: echo "::set-output name=badge::${{ format('https://img.shields.io/endpoint?url=https://gist.githubusercontent.com/{0}/{1}/raw/{2}', github.repository_owner, inputs.gist_id, format(inputs.filename_template, inputs.name)) }}"
