--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,7 +14,7 @@ on:
       node_version:
         type: string
         required: false
-        default: "24"
+        default: 16.x
       build_path:
         type: string
         required: false
